samples/_failures_safe/1761129671_742ffe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10b4a5ec.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_10b4a5ec.c:167:9: error: expected ‘:’ or ‘...’ at end of input
  167 |         case TOKEN_IDENTIFIER
      |         ^~~~
./samples/SAFE/__tmp_10b4a5ec.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10b4a5ec.c:167:9: error: expected declaration or statement at end of input
